Fixed gap

--- a/css/style.css
+++ b/css/style.css
@@ -5385,9 +5385,9 @@ footer {
     position: fixed;
     top: 0;
     height: 10vh;
-    line-height: 10vh;
+/*    line-height: 10vh;
     background-color: #EBF5F4;
-    width: 100%;
+    width: 100%;*/
     z-index: 1;
 }
 
